# bng-indexer

./: README.md  pyproject.toml
docs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: usage.rst.txt
source/: api.rst  conf.py  index.rst
src/bng_indexer/: __init__.py
tests/: test__indexing.py
