[tool.poetry]
name = "bng-indexer"
version = "0.1.0"
description = "Create British National Grid-based spatial indexes."
authors = ["Dan Lewis <daniel.lewis@defra.gov.uk>", "Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
myst-parser = "^0.17.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
